duniverse/menhirLib.20200211/test/static/bad/unknown_symbol_in_attribute.mly
%token A B C
%attribute list(D) [@foo "bar"]       (* the symbol D is unknown, so this %attribute declaration cannot work *)
%start<unit> main
%%
main:
  A B list(C) {}
