duniverse/menhirLib.20200211/test/static/bad/unknown_symbol_in_attribute.exp
File "unknown_symbol_in_attribute.mly", line 2, characters 16-17:
Error: D is undefined.
